2013-01-03  James Robinson  <jamesr@chromium.org>

        Avoid mixed content when expanding context in code review tool
        https://bugs.webkit.org/show_bug.cgi?id=106060

        Reviewed by Tony Chang.

        Example failure: "The page at https://bugs.webkit.org/attachment.cgi?id=181222&action=review displayed insecure
        content from http://svn.webkit.org/repository/webkit/trunk/Source/WebCore/page/EventHandler.cpp?p=138617." This
        loads from "//svn.webkit.org/..." so the protocol matches.

        * code-review.js:

2013-01-02  Ojan Vafai  <ojan@chromium.org>

        REGRESSION: Review tool sometimes doesn't include some comments in preview & posts
        https://bugs.webkit.org/show_bug.cgi?id=105252

        Reviewed by Tony Chang.

        When adding context, the LineContainer for the context line can get removed.
        In that case, forEachLine needs to know to keep looping past that line number.

        Also, make it so that you can't leave comments on context lines.

        * code-review-test.html:
        * code-review.js:

2012-12-30  Martin Robinson  <mrobinson@igalia.com>

        PrettyDiff.rb fails to render image diffs with Ruby 1.9.3p194
        https://bugs.webkit.org/show_bug.cgi?id=104932

        Reviewed by Eric Seidel.

        Ruby 1.9 added the concept of string encodings, so the use of `match' with binary data
        treats it as UTF-8. Forcing the png_bytes string to have the "binary" encoding avoids
        this error.

        * PrettyPatch/PrettyPatch.rb: Use force_encoding.

2012-12-06  Ojan Vafai  <ojan@chromium.org>

        Review page is super flakey now
        https://bugs.webkit.org/show_bug.cgi?id=104331

        Committing without review since this is breaking the code review tool.

        remove is only shipping in Chromium. Use jQuery's remove instead.

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2012-12-05  Ojan Vafai  <ojan@chromium.org>
